--- a/.storybook/Dockerfile
+++ b/.storybook/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /storybook
 COPY package.json .
 COPY yarn.lock .
 
-RUN yarn --production=false
+RUN yarn --frozen-lockfile --production=false
 
 COPY . .
 
